--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<nav class='navbar navbar-expand navbar-light bg-light'>
-    <a class='navbar-brand'>{{pageTitle}}</a>
-    <ul class='nav nav-pills'>
-      <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/welcome']">Home</a></li>
-      <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/products']">Product List</a></li>
-    </ul>
-</nav>
-<div class='container'>
-  <router-outlet></router-outlet>
+<!--The whole content below can be removed with the new code.-->
+<div style="text-align:center">
+  <h1>
+    TaDa! Welcome to {{title}}!!
+  </h1>
+  ... Starter Files ...
 </div>
